--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,11 +5,11 @@
         <div class="Scaffold-module-scaffold-F6aIC">
             <header class="CarouselHeader-module-wrapper-B8ict">
                 <h2 class="Title-module-subheader--ZDhF Title-module-hasSeeMore-DEdTE" th:text="${genreTitle}">
-                    Gatunek
+                    Genre
                 </h2>
                 <a class="Title-module-seeMore-f3FXj Title-module-show-ZApWL"
                    th:href="@{/series/{genre}(genre=${genre})}">
-                    Pokaż wszystko
+                    Show all
                 </a>
             </header>
         </div>
@@ -43,8 +43,8 @@
                                                 </span>
                                                 <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
                                                     <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96">
-                                                        <span th:text="${seriesModel.seasonsCount} + ' ' + (seriesModel.seasonsCount == 1 ? 'Sezon' : 'Sezony')">
-                                                            Ilość sezonów
+                                                        <span th:text="${seriesModel.seasonsCount} + ' ' + (seriesModel.seasonsCount == 1 ? 'Season' : 'Seasons')">
+                                                            Seasons count
                                                         </span>
                                                     </span>
                                                 </span>
@@ -59,14 +59,19 @@
                                             <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
                                                  data-testhook="item-star" th:classappend="${seriesModel.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
                                                  th:attr="data-imdb-id=${seriesModel.imdbId}"></div>
-                                            <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"></div>
-                                            <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"></div>
+                                            <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8"
+                                                 th:classappend="${seriesModel.userRating != null ? (seriesModel.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
+                                                 onclick="rate('up', this)" th:attr="data-imdbid=${seriesModel.imdbId}" data-testhook="item-rating-up">
+                                                    </div>
+                                            <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8"
+                                                 th:classappend="${seriesModel.userRating != null ? (seriesModel.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
+                                                 onclick="rate('down', this)" th:attr="data-imdbid=${seriesModel.imdbId}" data-testhook="item-rating-down">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </span>
-<!--                </div>-->
                 <div class="Item-module-below-BMw6u Item-module-padding-kgN3F"></div>
             </div>
             <button type="button" class="Carousel-module-navigation-crAaj Carousel-module-next-AXbEv"></button>
@@ -80,11 +85,11 @@
         <div class="Scaffold-module-scaffold-F6aIC">
             <header class="CarouselHeader-module-wrapper-B8ict">
                 <h2 class="Title-module-subheader--ZDhF Title-module-hasSeeMore-DEdTE" th:text="${genreTitle}">
-                    Gatunek
+                    Genre
                 </h2>
                 <a class="Title-module-seeMore-f3FXj Title-module-show-ZApWL"
                    th:href="@{/movies/{genre}(genre=${genre})}">
-                    Pokaż wszystko
+                    Show all
                 </a>
             </header>
         </div>
@@ -117,7 +122,7 @@
                                             </span>
                                             <span class="Divider-module-divider-U-3--">
                                                 <span class="Year-module-container-60QAr" th:text="${movieModel.releaseYear}">
-                                                    2016
+                                                    Year release
                                                 </span>
                                             </span>
                                         </div>
@@ -131,8 +136,15 @@
                                         <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
                                              data-testhook="item-star" th:classappend="${movieModel.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
                                              th:attr="data-imdb-id=${movieModel.imdbId}"></div>
-                                        <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"></div>
-                                        <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"></div>
+                                        <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-up"
+                                             th:classappend="${movieModel.userRating != null ? (movieModel.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
+                                             onclick="rate('up', this)" th:attr="data-imdbid=${movieModel.imdbId}" data-testhook="item-rating-up">
+                                        </div>
+                                        <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-down"
+                                             th:classappend="${movieModel.userRating != null ? (movieModel.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
+                                             onclick="rate('down', this)" th:attr="data-imdbid=${movieModel.imdbId}" data-testhook="item-rating-down">
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
