--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
                                                 <!--                                                INFORMATION MODULE FRAME-->
                                                 <div class="Frame-module-body-ICZKd">
                                                     <h3 class="Frame-module-title-wgDhS" th:text="${item.title}">
-                                                        Hell on Wheels: Witaj w piekle
+                                                        Title
                                                     </h3>
                                                     <p class="FrameMeta-module-metadata-n-nYT">
                                                         <span class="Divider-module-divider-U-3-- Divider-module-featurebox-lE8g3">
@@ -58,7 +58,7 @@
                                                                    th:href="@{${item.imdbUrl}}" target="_blank"
                                                                    rel="noopener noreferrer nofollow" tabindex="-1"
                                                                    th:text="${item.imdbRating}">
-                                                                        8.3
+                                                                        Imdb Rating
                                                                 </a>
                                                             </span>
                                                         </span>
@@ -70,14 +70,14 @@
                                                                        tabindex="-1"
                                                                        th:href="@{'/series/'+${item.genre}}"
                                                                        th:text="${item.genre}">
-                                                                        Seriale dramatyczne
+                                                                        Series Genre
                                                                     </a>
                                                                     <a th:if="${item.getClass().simpleName == 'MovieDto'}"
                                                                        class="Genre-module-container-HcI4x Genre-module-featurebox-qQIAg Genre-module-link-kGNTi"
                                                                        tabindex="-1"
                                                                        th:href="@{'/movies/'+${item.genre}}"
                                                                        th:text="${item.genre}">
-                                                                        Filmy dramatyczne
+                                                                        Movie Genre
                                                                     </a>
                                                                 </span>
                                                             </span>
@@ -85,14 +85,14 @@
                                                         <span class="Divider-module-divider-U-3-- Divider-module-featurebox-lE8g3">
                                                             <span class="Year-module-container-60QAr Year-module-featurebox-kwpHV"
                                                                   th:text="${item.releaseYear}">
-                                                                2011
+                                                                Year Release
                                                             </span>
                                                         </span>
                                                         <span class="Divider-module-divider-U-3-- Divider-module-featurebox-lE8g3">
                                                             <span class="Seasons-module-container-ZM15y Seasons-module-featurebox-O9JXt"
                                                                   th:if="${item.getClass().simpleName == 'SeriesDto'}">
-                                                                 <span th:text="${item.seasonsCount} + ' ' + (item.seasonsCount == 1 ? 'Sezon' : 'Sezony')">
-                                                                     5 Sezony
+                                                                 <span th:text="${item.seasonsCount} + ' ' + (item.seasonsCount == 1 ? 'Season' : 'Seasons')">
+                                                                     Seasons count
                                                                  </span>
                                                             </span>
                                                            <span class="Seasons-module-container-ZM15y Seasons-module-featurebox-O9JXt"
@@ -101,22 +101,21 @@
                                                                    <span th:text="${item.timeline} + ' min.'"></span>
                                                                </span>
                                                                <span th:if="${item.timeline >= 60}">
-                                                                   <span th:text="${item.timeline div 60 + ' godz.' + (item.timeline % 60 > 0 ? ' ' + item.timeline % 60 + ' min.' : '')}"></span>
+                                                                   <span th:text="${item.timeline div 60 + ' hr.' + (item.timeline % 60 > 0 ? ' ' + item.timeline % 60 + ' min.' : '')}"></span>
                                                                </span>
                                                            </span>
                                                         </span>
                                                         <span class="Divider-module-divider-U-3-- Divider-module-featurebox-lE8g3 Divider-module-hasDefaultTypography-Uy4EO">
                                                             <span class="ParentalRating-module-container-lxbzk ParentalRating-module-featurebox-5aV-1 ParentalRating-module-hasDefaultTypography-UP2B1">
-                                                                <span th:text="${item.ageLimit} + ' lat'">
-                                                                    15 lat
+                                                                <span th:text="${item.ageLimit} + ' +'">
+                                                                    Age limit
                                                                 </span>
                                                             </span>
                                                         </span>
                                                     </p>
                                                     <p class="Frame-module-synopsis-Zx-xG"
                                                        th:text="${item.description}">
-                                                        Dołącz do weterana podróżującego na zachód w poszukiwaniu
-                                                        zemsty.
+                                                        Description
                                                     </p>
                                                     <div class="Frame-module-buttons-bIDYz">
                                                         <a class="FeatureBoxButton-module-button--HNtu Buttons-module-primary--YHdl Buttons-module-play-AAOaC"
@@ -124,31 +123,28 @@
                                                            th:if="${item.getClass().simpleName == 'SeriesDto'}"
                                                            th:with="formattedTitle=${item.title.toLowerCase().replace(' ', '-')+'/sezon-1'}"
                                                            th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
-                                                            Obejrzyj
+                                                            Watch
                                                         </a>
                                                         <a class="FeatureBoxButton-module-button--HNtu Buttons-module-primary--YHdl"
                                                            tabindex="-1"
                                                            th:if="${item.getClass().simpleName == 'MovieDto'}"
                                                            th:with="formattedTitle=${item.title.toLowerCase().replace(' ', '-')}"
-                                                           th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} "
-                                                           href="/movie/to_do">
-                                                            Obejrzyj
+                                                           th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                                            Watch
                                                         </a>
                                                         <a class="FeatureBoxButton-module-button--HNtu Buttons-module-primary--YHdl"
                                                            tabindex="-1"
                                                            th:if="${item.getClass().simpleName == 'SeriesDto'}"
                                                            th:with="formattedTitle=${item.title.toLowerCase().replace(' ', '-')+'/sezon-1'}"
-                                                           th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} "
-                                                           href="/series/hell-on-wheels-witaj-w-piekle">
-                                                            Przeczytaj więcej
+                                                           th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                                            Read more
                                                         </a>
                                                         <a class="FeatureBoxButton-module-button--HNtu Buttons-module-primary--YHdl"
                                                            tabindex="-1"
                                                            th:if="${item.getClass().simpleName == 'MovieDto'}"
                                                            th:with="formattedTitle=${item.title.toLowerCase().replace(' ', '-')}"
-                                                           th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} "
-                                                           href="movies/to_do">
-                                                            Przeczytaj więcej
+                                                           th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                                            Read more
                                                         </a>
                                                         <span>
                                                             <a class="MyList-module-container-zkH2- Buttons-module-secondary-br7-v Buttons-module-icon-ODVKH MyList-module-featureBox-F6kLA"
@@ -204,8 +200,8 @@
                                                         </span>
                                                         <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
                                                             <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96">
-                                                                <span th:text="${promoItem.seasonsCount} + ' ' + (promoItem.seasonsCount == 1 ? 'Sezon' : 'Sezony')">
-                                                                    Ilość sezonów
+                                                                <span th:text="${promoItem.seasonsCount} + ' ' + (promoItem.seasonsCount == 1 ? 'Season' : 'Seasons')">
+                                                                    Seasons count
                                                                 </span>
                                                             </span>
                                                         </span>
@@ -221,10 +217,14 @@
                                                          data-testhook="item-star" th:classappend="${promoItem.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
                                                          th:attr="data-imdb-id=${promoItem.imdbId}">
                                                     </div>
-                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"
-                                                         onclick="rate('up', this)" th:attr="data-imdbid=${promoItem.imdbId}" data-testhook="item-rating-up"></div>
-                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"
-                                                         onclick="rate('down', this)" th:attr="data-imdbid=${promoItem.imdbId}" data-testhook="item-rating-down"></div>
+                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8"
+                                                         th:classappend="${promoItem.userRating != null ? (promoItem.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
+                                                         onclick="rate('up', this)" th:attr="data-imdbid=${promoItem.imdbId}" data-testhook="item-rating-up">
+                                                    </div>
+                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8"
+                                                         th:classappend="${promoItem.userRating != null ? (promoItem.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
+                                                         onclick="rate('down', this)" th:attr="data-imdbid=${promoItem.imdbId}" data-testhook="item-rating-down">
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -282,7 +282,7 @@
                                                         </span>
                                                         <span class="Divider-module-divider-U-3--">
                                                             <span th:text="${promoItem.releaseYear}" class="Year-module-container-60QAr">
-                                                                2016
+                                                                Year release
                                                             </span>
                                                         </span>
                                                     </div>
@@ -297,11 +297,11 @@
                                                          data-testhook="item-star" th:classappend="${promoItem.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
                                                          th:attr="data-imdb-id=${promoItem.imdbId}">
                                                     </div>
-                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8"
+                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-up"
                                                          th:classappend="${promoItem.userRating != null ? (promoItem.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
                                                          onclick="rate('up', this)" th:attr="data-imdbid=${promoItem.imdbId}" data-testhook="item-rating-up">
                                                     </div>
-                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8"
+                                                    <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-down"
                                                          th:classappend="${promoItem.userRating != null ? (promoItem.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
                                                          onclick="rate('down', this)" th:attr="data-imdbid=${promoItem.imdbId}" data-testhook="item-rating-down">
                                                     </div>
@@ -360,6 +360,7 @@
         });
     });
 
+
     function rate(direction, element) {
         var csrfToken = document.querySelector('meta[name="_csrf"]').content;
         var csrfHeader = document.querySelector('meta[name="_csrf_header"]').content;
@@ -367,19 +368,19 @@
         var headers = new Headers();
         headers.append(csrfHeader, csrfToken);
         var imdbId = element.getAttribute('data-imdbid');
+
         fetch('/rate/' + direction + '/' + imdbId, { method: 'POST', headers: headers })
             .then(response => {
                 if (response.ok) {
-                    updateRatingUI(direction, imdbId);
+                    var container = element.closest('.InteractionIcons-module-container-apGgr');
+                    var rateUpIcon = container.querySelector('[data-imdbid="' + imdbId + '"][data-testhook="item-rating-up"]');
+                    var rateDownIcon = container.querySelector('[data-imdbid="' + imdbId + '"][data-testhook="item-rating-down"]');
+                    updateRatingUI(direction, rateUpIcon, rateDownIcon);
                 }
             });
     }
 
-    function updateRatingUI(direction, imdbId) {
-        var rateUpIcon = document.querySelector('[data-imdbid="' + imdbId + '"][data-testhook="item-rating-up"]');
-        var rateDownIcon = document.querySelector('[data-imdbid="' + imdbId + '"][data-testhook="item-rating-down"]');
-
-        // Resetowanie klas dla obu ikon
+    function updateRatingUI(direction, rateUpIcon, rateDownIcon) {
         rateUpIcon.className = 'RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-';
         rateDownIcon.className = 'RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1';
 
@@ -389,6 +390,8 @@
             rateDownIcon.classList.add('RateButtons-module-active-n-0Gb');
         }
     }
+
+
 
 </script>
 
