--- a/src/main/resources/templates/kids.html
+++ b/src/main/resources/templates/kids.html
@@ -26,29 +26,29 @@
                                 <div class="Scaffold-module-scaffold-F6aIC">
                                     <div>
                                         <div class="SearchFilters-module-container-d0i8m">
-                                            <div class="h1-login-form-header-HD2dE">Dla dzieci</div>
+                                            <div class="h1-login-form-header-HD2dE">Kids</div>
                                             <ul class="SearchFilters-module-list-P-HYT">
-                                                <li class="SearchFilters-module-item-VQgVJ"><span>Pokaż: </span>
+                                                <li class="SearchFilters-module-item-VQgVJ"><span>Show: </span>
                                                 </li>
                                                 <li class="SearchFilters-module-item-VQgVJ"
                                                     th:classappend="${activeFilter == 'all' ? 'SearchFilters-module-active-xbXxo' : ''}">
                                                     <a class="SearchFilters-module-link-cRk6q"
                                                        th:href="@{'/kids?filter=all'}"
-                                                       title="Wszystko">Wszystko</a>
+                                                       title="Wszystko">All</a>
                                                 </li>
 
                                                 <li class="SearchFilters-module-item-VQgVJ"
                                                     th:classappend="${activeFilter == 'series' ? 'SearchFilters-module-active-xbXxo' : ''}">
                                                     <a class="SearchFilters-module-link-cRk6q"
                                                        th:href="@{'/kids?filter=series'}"
-                                                       title="Seriale">Seriale</a>
+                                                       title="Seriale">Series</a>
                                                 </li>
 
                                                 <li class="SearchFilters-module-item-VQgVJ"
                                                     th:classappend="${activeFilter == 'movies' ? 'SearchFilters-module-active-xbXxo' : ''}">
                                                     <a class="SearchFilters-module-link-cRk6q"
                                                        th:href="@{'/kids?filter=movies'}"
-                                                       title="Filmy">Filmy</a>
+                                                       title="Filmy">Movies</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -92,8 +92,8 @@
                                                                     <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
                                                                         <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96"
                                                                               th:if="${itemModel.getClass().simpleName == 'SeriesDto'}">
-                                                                            <span th:text="${itemModel.seasonsCount} + ' ' + (itemModel.seasonsCount == 1 ? 'Sezon' : 'Sezony')">
-                                                                                5 Sezony
+                                                                            <span th:text="${itemModel.seasonsCount} + ' ' + (itemModel.seasonsCount == 1 ? 'Season' : 'Seasons')">
+                                                                                Seasons count
                                                                             </span>
                                                                         </span>
                                                                         <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96"
@@ -102,7 +102,7 @@
                                                                                 <span th:text="${itemModel.timeline} + ' min.'"></span>
                                                                             </span>
                                                                             <span th:if="${itemModel.timeline >= 60}">
-                                                                                <span th:text="${itemModel.timeline div 60 + ' godz.' + (itemModel.timeline % 60 > 0 ? ' ' + itemModel.timeline % 60 + ' min.' : '')}"></span>
+                                                                                <span th:text="${itemModel.timeline div 60 + ' hr.' + (itemModel.timeline % 60 > 0 ? ' ' + itemModel.timeline % 60 + ' min.' : '')}"></span>
                                                                             </span>
                                                                         </span>
                                                                     </span>
@@ -130,51 +130,6 @@
                                                         </div>
                                                     </div>
                                                 </div>
-<!--                                                <div th:each="movieModel : ${movies}"-->
-<!--                                                     class="Item-module-item-yTZtG Item-module-carouselItem-Q3n9V Item-module-landscapeItem-Sf-nw">-->
-<!--                                                    <div class="Item-module-box-4uBp3 Item-module-show-qrDtq">-->
-<!--                                                        <a class="Item-module-link-Lms-C" tabindex="-1"-->
-<!--                                                           th:with="formattedTitle=${movieModel.title.toLowerCase().replace(' ', '-')}"-->
-<!--                                                           th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">-->
-<!--                                                        </a>-->
-<!--                                                        <div class="Item-module-image-CGday"-->
-<!--                                                             th:style="'background-image: url(' + ${movieModel.imageUrl} + ');'">-->
-<!--                                                        </div>-->
-<!--                                                        <div class="Item-module-curtain-EV2Ya">-->
-<!--                                                            <div class="SeriesMeta-module-container-oFAL3">-->
-<!--                                                                <div class="SeriesMeta-module-metadata-8qwss">-->
-<!--                                                                    <span class="Divider-module-divider-U-3&#45;&#45;">-->
-<!--                                                                        <a class="ImdbRating-module-link-yYfI- ImdbRating-module-hasDefaultTypography-luAjW"-->
-<!--                                                                           th:href="@{${movieModel.imdbUrl}}"-->
-<!--                                                                           target="_blank"-->
-<!--                                                                           tabindex="-1"-->
-<!--                                                                           th:text="${movieModel.imdbRating}">-->
-<!--                                                                            ImdbRating-->
-<!--                                                                        </a>-->
-<!--                                                                    </span>-->
-<!--                                                                    <span class="Divider-module-divider-U-3&#45;&#45; Divider-module-hasDefaultTypography-Uy4EO">-->
-<!--                                                                        <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96">-->
-<!--                                                                            <span th:text="${movieModel.releaseYear}">-->
-<!--                                                                                ReleaseYear-->
-<!--                                                                            </span>-->
-<!--                                                                        </span>-->
-<!--                                                                    </span>-->
-<!--                                                                </div>-->
-<!--                                                            </div>-->
-<!--                                                            <div class="InteractionIcons-module-container-apGgr">-->
-<!--                                                                <a class="TooltipButton-module-container-PfKnw TooltipButton-module-isItem-R6NdL"-->
-<!--                                                                   tabindex="-1"-->
-<!--                                                                   th:with="formattedTitle=${movieModel.title.replace(' ', '-')}"-->
-<!--                                                                   th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">-->
-
-<!--                                                                </a>-->
-<!--                                                                <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"></div>-->
-<!--                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"></div>-->
-<!--                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"></div>-->
-<!--                                                            </div>-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
                                             </span>
                                             </div>
                                         </div>
