--- a/src/main/resources/templates/movie-title.html
+++ b/src/main/resources/templates/movie-title.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div id="content-wrapper" class>
+<div id="content-wrapper">
     <div class="dockable"></div>
     <div id="react-mount">
         <div class="Layout-module-internal-page--krBv">
@@ -53,7 +53,7 @@
                                                     <div class="ActionButton-module-wrapper-movie-Gds43s">
                                                         <form class="movie-button" th:action="@{/add-movie-to-history/{imdbId}(imdbId=${movie.imdbId})}" method="post">
                                                             <button type="submit" class="PlayButtonText-module-container-tunCR Buttons-module-primary--YHdl Buttons-module-play-AAOaC" tabindex="0">
-                                                                <span>Obejrzyj film</span>
+                                                                <span>Watch</span>
                                                             </button>
                                                         </form>
                                                     </div>
@@ -64,9 +64,16 @@
                                                              th:classappend="${movie.onUserList ? 'MyList-module-active-T4Dnx' : ''}"
                                                              th:attr="data-imdb-id=${movie.imdbId}"></div>
                                                     </a>
-                                                    <a class="Rate-module-container-SmrTr Buttons-module-secondary-br7-v Buttons-module-icon-ODVKH"
-                                                       data-testhook="rate-button-no-rating" tabindex="0">
-                                                        <div class="Rate-module-rate-GCdtz undefined"></div>
+                                                    <a class="Rate-module-container-SmrTr Buttons-module-secondary-br7-v RatingButtons-module-icon-HDsa3"
+                                                       data-testhook="rate-button-up" tabindex="0" onclick="rateMovie('up', this)"
+                                                       th:attr="data-imdbid=${movie.imdbId}">
+                                                        <div class="Rate-module-rate-GCdtz" th:classappend="${movie.userRating != null ? (movie.userRating ? ' Rate-module-activeRatingUp-XcMDm' : ' undefined') : ' null'}"></div>
+                                                    </a>
+
+                                                    <a class="Rate-module-container-SmrTr Buttons-module-secondary-br7-v RatingButtons-module-icon-HDsa3"
+                                                       data-testhook="rate-button-down" tabindex="0" onclick="rateMovie('down', this)"
+                                                       th:attr="data-imdbid=${movie.imdbId}">
+                                                        <div class="Rate-module-rate-grszv" th:classappend="${movie.userRating != null ? (movie.userRating ? ' undefined' : ' Rate-module-activeRatingDown-XcMDm') : ' null'}"></div>
                                                     </a>
                                                 </div>
                                             </div>
@@ -99,7 +106,7 @@
                                                     </span>
                                                 <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
                                                         <span class="ParentalRating-module-container-lxbzk ParentalRating-module-hasDefaultTypography-UP2B1">
-                                                            <span th:text="${movie.ageLimit} + ' lat'">
+                                                            <span th:text="${movie.ageLimit} + ' +'">
                                                                 Age limit
                                                             </span>
                                                         </span>
@@ -110,7 +117,7 @@
                                                     <div class="Group-module-group--XDAf">
                                                         <div class="Synopsis-module-container-pmsNY Synopsis-module-hasDefaultTypography-5xyxY"
                                                              itemprop="description" th:text="${movie.description}">
-                                                            Opis
+                                                            Description
                                                         </div>
                                                     </div>
                                                 </div>
@@ -123,7 +130,7 @@
                                                         <div class="">
                                                             <div>
                                                                 <span class="PeopleList-module-title-voAAo">
-                                                                    Obsada
+                                                                    Cast
                                                                 </span>
                                                                 <div class="PeopleList-module-peoplearray-KNtVQ"
                                                                      th:text="${movie.staff}">
@@ -133,11 +140,11 @@
                                                         </div>
                                                         <div class="Audio-module-container-OTfgl">
                                                                 <span class="Audio-module-title-57qKh">
-                                                                    <span>Język</span>
+                                                                    <span>Language</span>
                                                                 </span>
                                                             <span class="Audio-module-audio-VqD-r"
                                                                   th:text="${movie.languages}">
-                                                                    Polski
+                                                                    Movie Languages
                                                             </span>
                                                         </div>
                                                     </div>
@@ -160,7 +167,7 @@
                                             <header class="CarouselHeader-module-wrapper-B8ict">
                                                 <h2 class="Title-module-subheader--ZDhF undefined"
                                                     data-testhook="carousel-title">
-                                                    Podobne filmy
+                                                    Related movies
                                                 </h2>
                                             </header>
                                         </div>
@@ -211,8 +218,13 @@
                                                                 <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
                                                                      data-testhook="item-star" th:classappend="${relatedMovies.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
                                                                      th:attr="data-imdb-id=${relatedMovies.imdbId}"></div>
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"></div>
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"></div>
+                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-up"
+                                                                     th:classappend="${relatedMovies.userRating != null ? (relatedMovies.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
+                                                                     onclick="rate('up', this)" th:attr="data-imdbid=${relatedMovies.imdbId}" data-testhook="item-rating-up">
+                                                                </div>
+                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-down"
+                                                                     th:classappend="${relatedMovies.userRating != null ? (relatedMovies.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
+                                                                     onclick="rate('down', this)" th:attr="data-imdbid=${relatedMovies.imdbId}" data-testhook="item-rating-down"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -220,8 +232,7 @@
                                             </span>
                                             <div class="Item-module-below-BMw6u Item-module-padding-kgN3F"></div>
                                         </div>
-                                        <button type="button"
-                                                class="Carousel-module-navigation-crAaj Carousel-module-next-AXbEv"></button>
+                                        <button type="button" class="Carousel-module-navigation-crAaj Carousel-module-next-AXbEv"></button>
                                     </div>
                                 </div>
                             </div>
@@ -270,6 +281,102 @@
                 .catch(error => console.error('Error:', error));
         });
     });
+</script>
+<script>
+    function rateMovie(direction, element) {
+        var imdbId = element.getAttribute('data-imdbid');
+        var csrfToken = document.querySelector('meta[name="_csrf"]').content;
+        var csrfHeader = document.querySelector('meta[name="_csrf_header"]').content;
+
+        var headers = new Headers();
+        headers.append(csrfHeader, csrfToken);
+
+        fetch('/rate/' + direction + '/' + imdbId, { method: 'POST', headers: headers })
+            .then(response => {
+                if (response.ok) {
+                    var container = element.closest('.ActionButton-module-container-iom96'); // Kontener przycisków
+                    updateMovieRatingUI(direction, container);
+                }
+            });
+    }
+    function updateMovieRatingUI(direction, container) {
+        var rateUpButton = container.querySelector('[data-testhook="rate-button-up"]');
+        var rateDownButton = container.querySelector('[data-testhook="rate-button-down"]');
+        var rateUpDiv = rateUpButton.querySelector('div');
+        var rateDownDiv = rateDownButton.querySelector('div');
+
+        if (direction === 'up') {
+            // Przełączanie między klasami 'Rate-module-activeRatingUp-XcMDm' i 'undefined'
+            if (rateUpDiv.classList.contains('Rate-module-activeRatingUp-XcMDm')) {
+                rateUpDiv.classList.remove('Rate-module-activeRatingUp-XcMDm');
+                rateUpDiv.classList.add('undefined');
+            } else {
+                rateUpDiv.classList.add('Rate-module-activeRatingUp-XcMDm');
+                rateUpDiv.classList.remove('undefined');
+            }
+            rateDownDiv.classList.remove('Rate-module-activeRatingDown-XcMDm');
+            rateDownDiv.classList.add('undefined');
+        } else if (direction === 'down') {
+            // Przełączanie między klasami 'Rate-module-activeRatingDown-XcMDm' i 'undefined'
+            if (rateDownDiv.classList.contains('Rate-module-activeRatingDown-XcMDm')) {
+                rateDownDiv.classList.remove('Rate-module-activeRatingDown-XcMDm');
+                rateDownDiv.classList.add('undefined');
+            } else {
+                rateDownDiv.classList.add('Rate-module-activeRatingDown-XcMDm');
+                rateDownDiv.classList.remove('undefined');
+            }
+            rateUpDiv.classList.remove('Rate-module-activeRatingUp-XcMDm');
+            rateUpDiv.classList.add('undefined');
+        }
+    }
+
+
+    function resetRatingButtons(rateUpButton, rateDownButton) {
+        var rateUpDiv = rateUpButton.querySelector('div');
+        var rateDownDiv = rateDownButton.querySelector('div');
+
+        rateUpDiv.classList.remove('Rate-module-activeRatingUp-XcMDm');
+        rateDownDiv.classList.remove('Rate-module-activeRatingDown-XcMDm');
+
+        // Dodaj klasę 'undefined' jeśli żaden z przycisków nie jest aktywny
+        if (!rateUpDiv.classList.contains('Rate-module-activeRatingUp-XcMDm') &&
+            !rateDownDiv.classList.contains('Rate-module-activeRatingDown-XcMDm')) {
+            rateUpDiv.classList.add('undefined');
+            rateDownDiv.classList.add('undefined');
+        }
+    }
+</script>
+<script>
+    function rate(direction, element) {
+        var csrfToken = document.querySelector('meta[name="_csrf"]').content;
+        var csrfHeader = document.querySelector('meta[name="_csrf_header"]').content;
+
+        var headers = new Headers();
+        headers.append(csrfHeader, csrfToken);
+        var imdbId = element.getAttribute('data-imdbid');
+
+        fetch('/rate/' + direction + '/' + imdbId, { method: 'POST', headers: headers })
+            .then(response => {
+                if (response.ok) {
+                    var container = element.closest('.InteractionIcons-module-container-apGgr');
+                    var rateUpIcon = container.querySelector('[data-imdbid="' + imdbId + '"][data-testhook="item-rating-up"]');
+                    var rateDownIcon = container.querySelector('[data-imdbid="' + imdbId + '"][data-testhook="item-rating-down"]');
+                    updateRatingUI(direction, rateUpIcon, rateDownIcon);
+                }
+            });
+    }
+
+    function updateRatingUI(direction, rateUpIcon, rateDownIcon) {
+        rateUpIcon.className = 'RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-';
+        rateDownIcon.className = 'RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1';
+
+        if (direction === 'up') {
+            rateUpIcon.classList.add('RateButtons-module-active-n-0Gb');
+        } else if (direction === 'down') {
+            rateDownIcon.classList.add('RateButtons-module-active-n-0Gb');
+        }
+    }
+
 </script>
 
 </body>
