--- a/src/main/resources/templates/series.html
+++ b/src/main/resources/templates/series.html
@@ -33,7 +33,7 @@
                                             <button class="SeasonsNavigation-module-button-vAD9n"
                                                     data-testhook="genre-button" tabindex="0"
                                                     style="text-decoration: none;">
-                                                <span>Gatunek</span>
+                                                <span>Genre</span>
                                             </button>
                                             <div class="SeasonsNavigation-module-dropdownWrapper-kC57-">
                                                 <ul th:each="genre : ${genres}"
@@ -43,7 +43,7 @@
                                                         data-testhook="season-navigation-link" tabindex="0">
                                                         <a th:href="@{'/series/' + ${genre.genreType.toLowerCase()}}">
                                                             <span class="SeasonButton-module-link-NG1PO"
-                                                                  th:text="${genre.genreType}">Gatunek serialu</span>
+                                                                  th:text="${genre.genreType}">Series Genre</span>
                                                         </a>
                                                     </li>
                                                 </ul>
